fix final a magazines + GET /users i GET /users/:id
